--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,11 +7,6 @@ edition = "2021"
 name = "server"
 path = "src/server/main.rs"
 
-[[bin]]
-name = "client"
-path = "src/client/wrapper.rs"
-
 [dependencies]
-include_dir = "0.7.4"
-pyo3 = "0.23.4"
 log = "0.4.25"
+env_logger = "0.11.6"
