--- a/.gitignore
+++ b/.gitignore
@@ -267,3 +267,7 @@ fabric.properties
 
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
+
+# .idea misc and profile
+.idea/misc.xml
+.idea/inspectionProfiles
