--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ serde = { version = "1.0.217", features = ["derive"] }
 serde-pickle = "1.2.0"
 serde_bytes = "0.11.15"
 tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros", "net", "sync"] }
+rand = "0.9.0-beta.3"
