--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,10 @@ name = "yourcraft"
 version = "0.1.0"
 edition = "2021"
 
+[[bin]]
+name = "yourcraft-server"
+path = "rs/main.rs"
+
 [dependencies]
 log = "0.4.25"
 env_logger = "0.11.6"
