--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ serde-pickle = "1.2.0"
 serde_bytes = "0.11.15"
 tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros", "net", "sync", "time"] }
 rand = "0.9.0-beta.3"
+rayon = "1.10.0"
