--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,6 @@
 [package]
 name = "yourcraft"
+description = "KOSEN-KMITL Programming 4 Final Project - A 2d sandbox game server."
 version = "0.1.0"
 edition = "2021"
 
@@ -16,3 +17,4 @@ serde_bytes = "0.11.15"
 tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros", "net", "sync", "time"] }
 rand = "0.9.0-beta.3"
 rayon = "1.10.0"
+clap = { version = "4.5.27", features = ["derive"] }
