--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ env_logger = "0.11.6"
 serde = { version = "1.0.217", features = ["derive"] }
 serde-pickle = "1.2.0"
 serde_bytes = "0.11.15"
-tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros", "net", "sync", "time"] }
+tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros", "net", "sync", "time", "signal"] }
 rand = "0.9.0-beta.3"
 rayon = "1.10.0"
 clap = { version = "4.5.27", features = ["derive"] }
