--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,4 @@ tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros", "ne
 rand = "0.9.0-beta.3"
 rayon = "1.10.0"
 clap = { version = "4.5.27", features = ["derive"] }
+thiserror = "2.0.11"
