--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,4 @@ rand = "0.9.0-beta.3"
 rayon = "1.10.0"
 clap = { version = "4.5.27", features = ["derive"] }
 thiserror = "2.0.11"
+get-size = "0.1.4"
