--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ serde = { version = "1.0.217", features = ["derive"] }
 serde-pickle = "1.2.0"
 serde_bytes = "0.11.15"
 tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros", "net", "sync", "time", "signal"] }
-rand = "0.9.0-beta.3"
+rand = "0.9.0"
 rayon = "1.10.0"
 clap = { version = "4.5.27", features = ["derive"] }
 thiserror = "2.0.11"
