--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,4 @@ clap = { version = "4.5.27", features = ["derive"] }
 thiserror = "2.0.11"
 get-size = "0.1.4"
 noise = "0.9.0"
+strum = { version = "0.26.3", features = ["derive"] }
