--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,7 @@ thiserror = "2.0.11"
 get-size = "0.1.4"
 noise = "0.9.0"
 strum = { version = "0.26.3", features = ["derive"] }
+ratatui = "0.29.0"
+color-eyre = "0.6.3"
+crossterm = { version = "0.28", features = ["event-stream"] }
+futures = "0.3.31"
