--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,3 +26,4 @@ ratatui = "0.29.0"
 color-eyre = "0.6.3"
 crossterm = { version = "0.28", features = ["event-stream"] }
 futures = "0.3.31"
+tui-textarea = "0.7.0"
