--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,3 +27,4 @@ color-eyre = "0.6.3"
 crossterm = { version = "0.28", features = ["event-stream"] }
 futures = "0.3.31"
 tui-textarea = "0.7.0"
+humantime = "2.1.0"
